EM-002: Add Simpson's faces to Eyes Movement

--- a/index.html
+++ b/index.html
@@ -8,14 +8,39 @@
     <link rel="stylesheet" type="text/css" href="./styles.css">
 </head>
 <body>
-    <div class="eyes">
-        <div class="eye">
-            <div class="ball"></div>
+    <div class="container">
+        <header>
+            <h1>&#9679; &#9679; &#9679; &#9679; The Simpson's Eyes Movement Show &#9679; &#9679; &#9679; &#9679;</h1>
+        </header>
+        <div id="buttons">
+            <button onclick="changeImg('images/HomeroS.png')" width='200' height='30'>Homero</button>
+            <button onclick="changeImg('images/MarchS.png')" width='200' height='30'>March</button>
+            <button onclick="changeImg('images/BartS.png')" width='200' height='30'>Bart</button>
+            <button onclick="changeImg('images/LisaS.png')" width='200' height='30'>Lisa</button>
+        </div>                
+        <div class="portrait">
+            <div class="eyes">
+                <div class="eye">
+                    <div class="ball"></div>
+                </div>
+                <div class="eye">
+                    <div class="ball"></div>
+                </div>
+            </div>
+            <div class="image">
+                <img  id="img" src="images/emptyBg.png" >
+            </div>
+            
         </div>
-        <div class="eye">
-            <div class="ball"></div>
-        </div>
-    </div>    
+    </div>
+    <footer>
+        <p> Copyright © 2022 - MIT xPRO - Claudia Muñoz </p>
+    </footer>
 </body>
 <script src="./eyes.js"></script>
+<script>
+     function changeImg(img){        
+            document.getElementById('img').src = img;             
+    }
+</script>
 </html>
