EM-003: Use Simpson font and update CSS

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eyes Movement</title>
+    <title>Simpsons Eyes Movement Show</title>
     <link rel="stylesheet" type="text/css" href="./styles.css">
+    <link rel="icon" href="images/eyes.ico">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>&#9679; &#9679; &#9679; &#9679; The Simpson's Eyes Movement Show &#9679; &#9679; &#9679; &#9679;</h1>
+            <h1>The Simpsons Eyes Movement Show </h1>
         </header>
         <div id="buttons">
-            <button onclick="changeImg('images/HomeroS.png')" width='200' height='30'>Homero</button>
-            <button onclick="changeImg('images/MarchS.png')" width='200' height='30'>March</button>
-            <button onclick="changeImg('images/BartS.png')" width='200' height='30'>Bart</button>
-            <button onclick="changeImg('images/LisaS.png')" width='200' height='30'>Lisa</button>
-        </div>                
+            <a href="#" onclick="changeImg('images/HomeroS.png')"> Homero </a> &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp;
+            <a href="#" onclick="changeImg('images/MarchS.png')"> March </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <a href="#" onclick="changeImg('images/BartS.png')"> Bart </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+            <a href="#" onclick="changeImg('images/LisaS.png')"> Lisa </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;            
+        </div>           
+        <div class="frame shadow">
+
+        
         <div class="portrait">
             <div class="eyes">
                 <div class="eye">
@@ -32,9 +36,10 @@
             </div>
             
         </div>
+    </div>     
     </div>
     <footer>
-        <p> Copyright © 2022 - MIT xPRO - Claudia Muñoz </p>
+        <p> Copyright - 2022  &nbsp&nbsp MIT xPRO  &nbsp Claudia Munoz</p><br>        
     </footer>
 </body>
 <script src="./eyes.js"></script>
