Make it responsive

--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
             <h1>The Simpsons Eyes Movement Show </h1>
         </header>
         <div id="buttons">
-            <a href="#" onclick="changeImg('images/HomeroS.png')"> Homero </a> &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp;
-            <a href="#" onclick="changeImg('images/MarchS.png')"> March </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            <a href="#" onclick="changeImg('images/BartS.png')"> Bart </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            <a href="#" onclick="changeImg('images/LisaS.png')"> Lisa </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;            
+            <a href="#" onclick="changeImg('images/HomeroS.png')"> Homero </a>
+            <a href="#" onclick="changeImg('images/MarchS.png')"> March </a>
+            <a href="#" onclick="changeImg('images/BartS.png')"> Bart </a>
+            <a href="#" onclick="changeImg('images/LisaS.png')"> Lisa </a>
         </div>           
-        <div class="frame shadow">
-
-        
+        <div class="frame shadow">        
         <div class="portrait">
             <div class="eyes">
                 <div class="eye">
